style.css
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    font-family: Arial, sans-serif;
}

html{
    scroll-behavior:smooth;
}

body{
    background:#0f172a;
    color:white;
}

/* NAVIGATION */

nav{
    display:flex;
    justify-content:space-between;
    align-items:center;
    padding:30px 80px;
}

.logo{
    font-size:32px;
    font-weight:bold;
}

ul{
    display:flex;
    gap:40px;
    list-style:none;
}

a{
    color:white;
    text-decoration:none;
    font-size:18px;
}

/* HERO SECTION */

.hero{
    min-height:85vh;
    display:flex;
    flex-direction:column;
    justify-content:center;
    align-items:center;
    text-align:center;
    padding:20px;
}

.hero h1{
    font-size:72px;
    margin-bottom:20px;
}

.hero h2{
    font-size:34px;
    color:#94a3b8;
    margin-bottom:30px;
}

.hero p{
    max-width:800px;
    font-size:24px;
    line-height:1.6;
    margin-bottom:40px;
}

/* BUTTONS */

.buttons{
    display:flex;
    gap:20px;
    margin-bottom:60px;
}

.buttons a{
    padding:16px 30px;
    border:1px solid #334155;
    border-radius:10px;
    font-size:18px;
}

/* STATS */

.stats{
    display:flex;
    gap:30px;
    flex-wrap:wrap;
    justify-content:center;
}

.card{
    padding:35px;
    border:1px solid #334155;
    border-radius:12px;
    min-width:220px;
}

.number{
    font-size:48px;
    font-weight:bold;
}

.label{
    margin-top:12px;
    color:#94a3b8;
    font-size:20px;
}

/* ABOUT */

.about{
    max-width:900px;
    margin:80px auto 140px;
    text-align:left;
    padding:0 40px;
}

.about h2{
    font-size:42px;
    margin-bottom:28px;
    color:white;
}

.about p{
    max-width:850px;
    font-size:21px;
    line-height:1.75;
    margin-bottom:24px;
    color:#cbd5e1;
}

